<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="dialog"
            type="com.framgia.fdms.screen.producer.ProducerDialog"/>

        <variable
            name="producer"
            type="com.framgia.fdms.data.model.Producer"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dp_15"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_15"
            android:layout_marginLeft="@dimen/dp_2"
            android:text="@{dialog.title}"
            android:textColor="@color/color_black"
            android:textSize="@dimen/sp_20"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:messageError='@{dialog.messageError}'
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_full_name"
                android:text='@={producer.name}'
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_description"
                android:text='@={producer.description}'
                />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            >

            <Button
                android:layout_width="@dimen/dp_70"
                android:layout_height="@dimen/dp_50"
                android:background="@color/color_white"
                android:onClick="@{() -> dialog.onCancelClick()}"
                android:text="@string/action_cancel"
                android:textColor="@color/colorAccent"
                />

            <Button
                android:layout_width="@dimen/dp_70"
                android:layout_height="@dimen/dp_50"
                android:background="@color/color_white"
                android:onClick="@{() -> dialog.onSubmitClick()}"
                android:text="@string/title_ok"
                android:textColor="@color/colorAccent"
                />
        </LinearLayout>
    </LinearLayout>
</layout>

