<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dp_250"
    android:layout_height="match_parent"
    android:layout_gravity="right|end"
    android:fillViewport="true"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_gray_blue"
        android:orientation="vertical"
        >

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:background="@color/color_mos"
            android:gravity="center_vertical"
            android:paddingEnd="@dimen/dp_15"
            android:paddingLeft="@dimen/dp_15"
            android:paddingRight="@dimen/dp_15"
            android:paddingStart="@dimen/dp_15"
            android:text="@string/title_filter_by"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_18"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/color_black_transparent"
            />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingBottom="@dimen/dp_8"
            android:paddingEnd="@dimen/dp_8"
            android:paddingLeft="@dimen/dp_15"
            android:paddingRight="@dimen/dp_8"
            android:paddingStart="@dimen/dp_15"
            android:paddingTop="@dimen/dp_5"
            android:text="@string/title_device_name_code"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_15"
            android:inputType="text"
            />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingBottom="@dimen/dp_8"
            android:paddingLeft="@dimen/dp_15"
            android:paddingStart="@dimen/dp_15"
            android:paddingTop="@dimen/dp_5"
            android:text="@string/title_device_status"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingBottom="@dimen/dp_8"
            android:paddingEnd="@dimen/dp_20"
            android:paddingLeft="@dimen/dp_20"
            android:paddingRight="@dimen/dp_20"
            android:paddingStart="@dimen/dp_20"
            android:text="@string/title_filter_by"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/sp_16"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/color_gray"
            />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingBottom="@dimen/dp_8"
            android:paddingEnd="@dimen/dp_15"
            android:paddingLeft="@dimen/dp_15"
            android:paddingRight="@dimen/dp_15"
            android:paddingStart="@dimen/dp_15"
            android:paddingTop="@dimen/dp_5"
            android:text="@string/title_device_category"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingBottom="@dimen/dp_8"
            android:paddingLeft="@dimen/dp_20"
            android:paddingStart="@dimen/dp_20"
            android:text="@string/title_filter_by"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/sp_16"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/color_gray"
            />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingBottom="@dimen/dp_8"
            android:paddingLeft="@dimen/dp_15"
            android:paddingStart="@dimen/dp_15"
            android:paddingTop="@dimen/dp_5"
            android:text="@string/title_vendor"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingBottom="@dimen/dp_8"
            android:paddingEnd="@dimen/dp_20"
            android:paddingLeft="@dimen/dp_20"
            android:paddingRight="@dimen/dp_20"
            android:paddingStart="@dimen/dp_20"
            android:text="@string/title_filter_by"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/sp_16"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/color_gray"
            />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingBottom="@dimen/dp_8"
            android:paddingEnd="@dimen/dp_15"
            android:paddingLeft="@dimen/dp_15"
            android:paddingRight="@dimen/dp_15"
            android:paddingStart="@dimen/dp_15"
            android:paddingTop="@dimen/dp_5"
            android:text="@string/title_maker"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingBottom="@dimen/dp_8"
            android:paddingLeft="@dimen/dp_20"
            android:paddingStart="@dimen/dp_20"
            android:paddingRight="@dimen/dp_20"
            android:paddingEnd="@dimen/dp_20"
            android:text="@string/title_device_category"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/sp_16"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/color_gray"
            />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingBottom="@dimen/dp_8"
            android:paddingLeft="@dimen/dp_15"
            android:paddingStart="@dimen/dp_15"
            android:paddingRight="@dimen/dp_15"
            android:paddingEnd="@dimen/dp_15"
            android:paddingTop="@dimen/dp_5"
            android:text="@string/title_meeting_room"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingBottom="@dimen/dp_8"
            android:paddingLeft="@dimen/dp_20"
            android:paddingStart="@dimen/dp_20"
            android:paddingRight="@dimen/dp_20"
            android:paddingEnd="@dimen/dp_20"
            android:text="@string/title_device_category"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/sp_16"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/color_gray"
            />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
