<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    >
    <data>
        <variable
            name="viewModel"
            type="com.framgia.fdms.screen.deviceusingmanager.DeviceUsingManagerViewModel"
            />
    </data>
    <LinearLayout
        android:layout_width="@dimen/dp_250"
        android:layout_height="match_parent"
        android:layout_gravity="right|end"
        android:background="@color/color_gray_blue"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_mos"
            android:gravity="center"
            android:orientation="horizontal"
            >
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_50"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingEnd="@dimen/dp_15"
                android:paddingLeft="@dimen/dp_15"
                android:paddingRight="@dimen/dp_15"
                android:paddingStart="@dimen/dp_15"
                android:text="@string/title_filter_by"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"
                android:textStyle="bold"
                />
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.onClearFilterClick()}"
                android:padding="@dimen/dp_5"
                android:text="@string/action_clear"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold"
                />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/color_black_transparent"
            />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingBottom="@dimen/dp_8"
            android:paddingEnd="@dimen/dp_15"
            android:paddingLeft="@dimen/dp_15"
            android:paddingRight="@dimen/dp_8"
            android:paddingStart="@dimen/dp_15"
            android:paddingTop="@dimen/dp_5"
            android:text="@string/title_device_name_code"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            />

        <android.support.v7.widget.SearchView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            bind:queryTextListener="@{viewModel}"
            bind:searchText="@{viewModel.filterModel.deviceCode}"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/color_gray"
            />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:onClick="@{()-> viewModel.onChooseStatusClick()}"
            android:paddingBottom="@dimen/dp_8"
            android:paddingEnd="@dimen/dp_15"
            android:paddingLeft="@dimen/dp_15"
            android:paddingRight="@dimen/dp_15"
            android:paddingStart="@dimen/dp_15"
            android:paddingTop="@dimen/dp_5"
            android:text="@string/title_request_status"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:onClick="@{()-> viewModel.onChooseStatusClick()}"
            android:paddingBottom="@dimen/dp_8"
            android:paddingEnd="@dimen/dp_20"
            android:paddingLeft="@dimen/dp_20"
            android:paddingRight="@dimen/dp_20"
            android:paddingStart="@dimen/dp_20"
            android:text="@{viewModel.filterModel.status.name}"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/sp_16"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/color_gray"
            />
    </LinearLayout>

</layout>
